k3s/policies/linkerd-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkerd-control-plane-access
  namespace: demo-namespace
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: linkerd
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
